Fix resource controls on mobile view

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -103,6 +103,12 @@ main.main {
     .header .icon.sign-out {
         margin: 0 !important;
     }
+
+    .resource .controls > * {
+        display: block !important;
+        float: none !important;
+        margin: 5px 0 !important;
+    }
 }
 
 .pagination {
